# metris

./: CMakeLists.txt  README.md
src/: animation.cpp  animation.hpp  atlas.cpp  atlas.hpp  bass_handler.cpp  bass_handler.hpp  brick.cpp  brick.hpp  game_logic.cpp  game_logic.hpp  level.cpp  level.hpp  main.cpp  sdl_helper.cpp  sdl_helper.hpp  segment_display.cpp  segment_display.hpp  sprite.cpp  sprite.hpp  star.cpp  star.hpp  timer.cpp  timer.hpp  util.cpp  util.hpp
